crates/macros/tests/debug_job/fail/invalid_attrs.stderr
error: expected `context`
 --> tests/debug_job/fail/invalid_attrs.rs:3:13
  |
3 | #[debug_job(foo)]
  |             ^^^
